# Conect4

./: ai_logic.py  app.py  engine.py  events.py  main.py  pyproject.toml  readme.md  sounds.py
utils/: config.py  dqn_agent.py  dqn_model.pth  evaluate_dqn.py  game_engine.py  minimax.py  train_dqn.py
