[project]
name = "Conect4"
version = "0.1.0"
description = "A sample project for DQN"
authors = ["Sreekanth Potlabathini <srikanth.potlabathini@gmail.com>"]
requires-python = ">=3.11"

dependencies = [
    "annotated-types==0.7.0",
    "filelock==3.18.0",
    "fsspec==2025.5.1",
    "Jinja2==3.1.6",
    "MarkupSafe==3.0.2",
    "mpmath==1.3.0",
    "networkx==3.5",
    "numpy==2.3.1",
    "pydantic==2.11.7",
    "pydantic_core==2.33.2",
    "pygame==2.6.1",
    "sympy==1.14.0",
    "torch==2.7.1",
    "typing-inspection==0.4.1",
    "typing_extensions==4.14.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
